# llmops

./: .dockerignore  .gitignore  ANONYMOUS_ACCESS_GUIDE.md  CREATE_ADMIN_GUIDE.md  DOCKER_DEPLOYMENT.md  README.md  deploy.sh  docker-compose.yml  env.template  init-db.sql
imooc-llmops-api/: .env.example  create_test_user.py  pyproject.toml  requirements-pure.txt  requirements.linux.txt  requirements.noversion.txt  requirements.txt  run.sh  run_app.sh  run_celery.sh  simple_create_user.py
imooc-llmops-api/app/http/: app.py  module.py
imooc-llmops-api/docs/: 01.项目API文档.md  03.Postman请求结构.json
imooc-llmops-api/internal/core/agent/agents/: function_call_agent.py
imooc-llmops-api/internal/core/agent/entities/: agent_entity.py
imooc-llmops-api/internal/core/file_extractor/: file_extractor.py
imooc-llmops-api/internal/core/language_model/: language_model_manager.py
imooc-llmops-api/internal/core/language_model/entities/: model_entity.py  provider_entity.py
imooc-llmops-api/internal/core/language_model/providers/openai/: DeepSeek-V3.yaml  chat.py  positions.yaml
imooc-llmops-api/internal/core/tools/api_tools/entities/: openapi_schema.py
imooc-llmops-api/internal/core/tools/builtin_tools/providers/: providers.yaml
imooc-llmops-api/internal/lib/: helper.py
imooc-llmops-api/internal/router/: router.py
imooc-llmops-api/internal/service/: ai_service.py  app_service.py  assistant_agent_service.py  conversation_service.py  language_model_service.py  vector_database_service.py  workflow_service.py
imooc-llmops-api/storage/vector_store/: 01.项目API文档.md
(+304 files in other folders)
